style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-size: 16px;
    font-family: 'Open Sans', sans-serif;
}

.header {
    display: flex;
    justify-content: center;
}

.logo {
    width: 7em;
}

.flex {
    display: flex;
    flex-direction: row;
    gap: 3em;
}

.flex a {
    text-decoration: none;
    color: hsl(238, 22%, 44%);
}

.section {
    margin-top: 5em;
    display: flex;
    justify-content: center;
    align-items: center;
}

.section-title {
    font-size: 2.4em;
    font-weight: bold;
    font-family: 'Raleway', sans-serif;
    color: hsl(243, 87%, 12%);
}

.big-mb {
    margin-bottom: 10em;
}

.inline-form {
    display: flex;
    flex-direction: row;
    gap: 1em;
    height: 2.5em;
}

.input {
    width: 17em;
}

.input::placeholder {
    font-size: 0.7em;
}

.get-started {
    width: 13em;
}

.get-started:hover {
    opacity: 0.8;
}

.illustration-img {
    width: 40em;
}

.curve-bg {
    width: 100vw;
}

.second-section {
    background: hsl(240, 75%, 98%);
    margin-top: 0;
    padding-bottom: 6em;
}

.section-title-2 {
    font-size: 2em;
    font-weight: bold;
    font-family: 'Raleway', sans-serif;
    color: hsl(243, 87%, 12%);
}

.section-title-2 p {
    width: 5em;
}

.see-txt {
    text-decoration: none;
    color: hsl(170, 45%, 43%);
    padding-bottom: 0.3em;
    border-bottom: 1px solid hsl(170, 45%, 43%);
}

.see-txt:hover {
    color: hsl(170, 45%, 43%);
    opacity: 0.7;
}

.testimonial {
    background-color: #fff;
    border-radius: 5px;
    padding: 2em;
    width: 25em;
    color: hsl(238, 22%, 44%);
}

.testimonial-author {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.5em;
}

.author-img {
    width: 3em;
    border-radius: 50%;
}

.author-details {
    display: flex;
    flex-direction: column;
    color: hsl(238, 22%, 44%);
}

.author-name {
    font-size: 0.9em;
    font-weight: bold;
    color: hsl(243, 87%, 12%);
}

.author-position {
    font-size: 0.7em;
}

.third-section {
    margin-top: 0;
    background-color: hsl(238, 22%, 44%);
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2em;
    padding: 5em 0;
}

.section-txt {
    width: 25em;
}

.get-access {
    font-family: "Raleway", sans-serif;
    font-weight: bold;
    font-size: 2em;
    letter-spacing: 0.05em;
    color: hsl(240, 75%, 98%);
}

.get-access-txt {
    font-size: 0.8em;
    color: hsl(240, 75%, 98%);
}

.section-form {
    width: 25em;
}

.section-form input::placeholder {
    font-size: 0.7em;
}

.section-form button {
    padding: 0.5em 1.5em;
    font-size: 0.8em;
}

.section-form button:hover {
    opacity: 0.7;
}

footer {
    background-color: hsl(243, 87%, 12%);
    color: hsl(240, 75%, 98%);
    padding: 5em 0;
}

.footer-content {
    display: flex;
    flex-direction: column;
    margin: auto;
}

.footer-info {
    display: flex;
    flex-direction: row;
    gap: 10em;
    margin-top: 2em;
}

.phone-mail {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.phone {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1em;
}

.mail {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1em;
}

.about {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.contact {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

footer a {
    color: hsl(240, 75%, 98%);
    text-decoration: none;
}

footer a:hover {
    color: hsl(238, 22%, 44%);
}

footer ul li {
    display: inline;
    list-style-type: none;
    border: 1px solid hsl(240, 75%, 98%);
    border-radius: 50%;
    overflow: hidden;
    margin: 0em 0.5em 0em 0.5em;
    padding: 0.5em 0.5em 0.5em 0.6em;
    font-size: 0.7em;
}

.fb {
    padding: 0em 0.2em 1em 0.3em;
}

.tw {
    padding: 0em 0em 1em 0.1em;
}

.ig {
    padding: 0em 0.3em 1em 0.2em;
}

footer ul li:hover {
    color: hsl(238, 22%, 44%);
    border: 1px solid hsl(238, 22%, 44%);
}

footer ul li:hover a {
    color: hsl(238, 22%, 44%);
}

@media only screen and (max-width: 767px) {
    .footer-content {
        display: flex;
        flex-direction: column;
        margin: auto;
        padding-left: 3em;
    }
    .footer-info {
        display: flex;
        flex-direction: column;
        gap: 4em;
        margin-top: 2em;
    }
    .icons {
        display: flex;
        flex-direction: row;
        justify-content: center;
    }
}

.colors {
    /*Very Dark Blue*/
    color: hsl(243, 87%, 12%);
    /*Desaturated Blue*/
    color: hsl(238, 22%, 44%);
    /*Bright Blue*/
    color: hsl(224, 93%, 58%);
    /*Moderate Cyan*/
    color: hsl(170, 45%, 43%);
    /*Light Grayish Blue*/
    color: hsl(240, 75%, 98%);
    /*Light Gray*/
    color: hsl(0, 0%, 75%);
}

